--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,21 @@
 {
     "env": {
-        "browser": true,
-        "es2021": true,
-        "node": true
+      "browser": true,
+      "es2021": true,
+      "node": true
     },
-    "extends": [
-        "standard-with-typescript",
-        "plugin:react/recommended"
-    ],
+    "extends": ["plugin:react/recommended", "standard"],
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
+      "ecmaFeatures": {
+        "jsx": true
+      },
+      "ecmaVersion": "latest",
+      "sourceType": "module"
     },
-    "plugins": [
-        "react"
-    ],
+    "plugins": ["react", "@typescript-eslint"],
     "rules": {
-        "react/react-in-jsx-scope" : "off"
+      "react/react-in-jsx-scope": "off",
+      "no-use-before-define": "off"
     }
-}
+  }
