--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-react": "^7.34.1",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
-    "prettier-config-standard": "^7.0.0"
+    "prettier-config-standard": "^7.0.0",
+    "tailwindcss": "^3.4.1"
   }
 }
