feat: add Home Page and React Router DOM

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,9 @@
     "plugins": ["react", "@typescript-eslint"],
     "rules": {
       "react/react-in-jsx-scope": "off",
-      "no-use-before-define": "off"
+      "no-use-before-define": "off",
+      "no-trailing-spaces": "off",
+      "padded-blocks": "off"
+
     }
   }
