--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
+    "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "redux": "^5.0.1",
     "styled-components": "^6.1.8",
     "typescript": "*",
     "validator": "^13.11.0",
@@ -50,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.33",
     "@types/styled-components": "^5.1.34",
     "@types/validator": "types/validator",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
