--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
     "styled-components": "^6.1.8",
     "typescript": "*",
     "validator": "^13.11.0",
@@ -53,6 +54,7 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.33",
+    "@types/redux-logger": "^3.0.13",
     "@types/styled-components": "^5.1.34",
     "@types/validator": "types/validator",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
@@ -65,6 +67,7 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "prettier-config-standard": "^7.0.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "use-reducer-logger": "^1.0.2"
   }
 }
